CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(memoryManage)

INCLUDE_DIRECTORIES(journal)
INCLUDE_DIRECTORIES(utils)
INCLUDE_DIRECTORIES(paged)
INCLUDE_DIRECTORIES(PageEngine)
INCLUDE_DIRECTORIES(log)

ADD_SUBDIRECTORY(journal)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(paged)
ADD_SUBDIRECTORY(PageEngine)
ADD_SUBDIRECTORY(log)