CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(journal)

SET(LIB_UTIL_INCLUDE_FILES ../utils/memoryManage_declare.h)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIB_UTIL_INCLUDE_FILES} )

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 1.1 VERSION 1.1)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)


INSTALL(FILES ${LIB_UTIL_INCLUDE_FILES} DESTINATION "include")

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "lib/memoryManage")