CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(journal)

SET(LIB_UTIL_INCLUDE_FILES ../utils/memoryManage_declare.h ../utils/constants.h)
SET(LIB_INCLUDE_FILES ../utils/memoryManage_declare.h ../utils/constants.h FrameHeader.h PageHeader.h PageUtil.h)
SET(LIB_SOURCE_FILES journal.cpp Frame.hpp PageUtil.cpp Page.cpp)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIB_UTIL_INCLUDE_FILES} ${LIB_INCLUDE_FILES} ${LIB_SOURCE_FILES} )

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 1.1 VERSION 1.1)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)


INSTALL(FILES ${LIB_UTIL_INCLUDE_FILES} DESTINATION "include")

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "lib/memoryManage")