CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(optionHedgelog)

SET(LIB_SOURCE_FILES MM_Log.h MM_Log.cpp)

ADD_LIBRARY(${PROJECT_NAME} ${LIB_SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} log4cplus)

INSTALL(FILES MM_Log.h DESTINATION "include")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "lib/memoryManage")